--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
     "@angular/platform-browser": "^21.0.5",
     "@angular/platform-browser-dynamic": "^21.0.5",
     "@angular/router": "^21.0.5",
+    "@ngrx/signals": "^20.1.0",
+    "@primeuix/themes": "^2.0.2",
+    "@tailwindcss/postcss": "^4.1.18",
+    "postcss": "^8.5.6",
+    "primeicons": "^7.0.0",
+    "primeng": "^21.0.1",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.18",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.1"
   },
