--- a/package.json
+++ b/package.json
@@ -10,30 +10,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^21.0.5",
-    "@angular/common": "^21.0.5",
-    "@angular/compiler": "^21.0.5",
-    "@angular/core": "^21.0.5",
-    "@angular/forms": "^21.0.5",
-    "@angular/platform-browser": "^21.0.5",
-    "@angular/platform-browser-dynamic": "^21.0.5",
-    "@angular/router": "^21.0.5",
-    "@ngrx/signals": "^20.1.0",
+    "@angular/animations": "^19.2.17",
+    "@angular/common": "^19.2.17",
+    "@angular/compiler": "^19.2.17",
+    "@angular/core": "^19.2.17",
+    "@angular/forms": "^19.2.17",
+    "@angular/platform-browser": "^19.2.17",
+    "@angular/platform-browser-dynamic": "^19.2.17",
+    "@angular/router": "^19.2.17",
+    "@ngrx/signals": "^19.2.1",
     "@primeuix/themes": "^2.0.2",
     "@tailwindcss/postcss": "^4.1.18",
+    "apollo-angular": "^13.0.0",
     "postcss": "^8.5.6",
     "primeicons": "^7.0.0",
-    "primeng": "^21.0.1",
+    "primeng": "^19.1.4",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.18",
     "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.1"
+    "zone.js": "~0.15.0",
+    "@apollo/client": "^4.0.1",
+    "graphql": "^16"
   },
   "devDependencies": {
-    "@angular/build": "^21.0.3",
-    "@angular/cli": "~21.0.3",
-    "@angular/compiler-cli": "^21.0.5",
+    "@angular/build": "^19.2.17",
+    "@angular/cli": "~19.2.17",
+    "@angular/compiler-cli": "^19.2.17",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
@@ -42,6 +45,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "less": "^4.2.0",
-    "typescript": "~5.9.3"
+    "typescript": "~5.8.3"
   }
 }
