--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/postcss": "^4.1.18",
     "apollo-angular": "^13.0.0",
     "postcss": "^8.5.6",
+    "primeflex": "3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.4",
     "rxjs": "~7.8.0",
