--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@angular/platform-browser": "^19.2.17",
     "@angular/platform-browser-dynamic": "^19.2.17",
     "@angular/router": "^19.2.17",
+    "@apollo/client": "^4.0.1",
     "@ngrx/signals": "^19.2.1",
     "@primeuix/themes": "^2.0.2",
     "@tailwindcss/postcss": "^4.1.18",
     "apollo-angular": "^13.0.0",
+    "chart.js": "^4.5.1",
+    "graphql": "^16",
     "postcss": "^8.5.6",
     "primeflex": "3.3.1",
     "primeicons": "^7.0.0",
@@ -30,9 +33,7 @@
     "tailwindcss": "^4.1.18",
     "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0",
-    "@apollo/client": "^4.0.1",
-    "graphql": "^16"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular/build": "^19.2.17",
